[workspace]
resolver = "2"
members = ["sg-sdk-inner", "sg-sdk-macro", "example"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"

[profile.dev]
# Disabling debug info speeds up builds a bunch and we don't rely on it for debugging that much.
debug = 0

[profile.release]
# lto = true
# opt-level = 3
# codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

# uncomment for quick testing against local actix-net repo
# actix-service = { path = "../actix-net/actix-service" }
# actix-macros = { path = "../actix-net/actix-macros" }
# actix-rt = { path = "../actix-net/actix-rt" }
# actix-codec = { path = "../actix-net/actix-codec" }
# actix-utils = { path = "../actix-net/actix-utils" }
# actix-tls = { path = "../actix-net/actix-tls" }
# actix-server = { path = "../actix-net/actix-server" }
