[package]
name = "example"
version = "0.1.0"
edition = "2021"
repository = "git@github.com:ServerlessGuide/sg-sdk-temp/example.git"
description = "example fn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full", "macros", "tracing"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0" }
validator = { version = "0.16" }
validator_derive = { version = "0.16" }
lazy_static = { version = "1.4" }
bevy_reflect = { version = "0.12" }
pipe-trait = { version = "0.4" }
prost-types = { git = "https://github.com/TaurusM/prost.git", rev = "2e1602874493e9ed1ffaaf2e450be52c0f11dc32", package = "prost-types", version = "*" }
prost = { git = "https://github.com/TaurusM/prost.git", rev = "2e1602874493e9ed1ffaaf2e450be52c0f11dc32" }
rbs = { git = "https://github.com/TaurusM/rbatis.git", rev = "5428a0238fce87cd9b568ae569f7c826338fe844", package = "rbs", version = "*" }
rbatis = { git = "https://github.com/TaurusM/rbatis.git", rev = "5428a0238fce87cd9b568ae569f7c826338fe844", version = "*" }
rbatis-macro-driver = { git = "https://github.com/TaurusM/rbatis.git", rev = "5428a0238fce87cd9b568ae569f7c826338fe844", package = "rbatis-macro-driver", version = "*" }
async_once = { version = "0.2" }
http-body-util = { version = "0.1" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = { git = "https://github.com/TaurusM/tonic.git", rev = "d0985384c9f05e59c400a338512ec174adbb0a62", version = "*" }
dapr = { git = "https://github.com/TaurusM/dapr-rust-sdk.git", rev = "c1d95b6154a6a18b8e616fb04e96e011f7c52053", version = "*" }
sg-sdk-inner = { path = "../sg-sdk-inner" }
sg-sdk-macro = { path = "../sg-sdk-macro" }

base64 = { version = "0.21" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
