[package]
name = "example"
version = "0.1.0"
edition = "2021"
repository = "git@github.com:ServerlessGuide/sg-sdk-temp/example.git"
description = "example fn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full", "macros", "tracing"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0" }
validator = { version = "0.16" }
validator_derive = { version = "0.16" }
lazy_static = { version = "1.4" }
bevy_reflect = { version = "0.12" }
pipe-trait = { version = "0.4" }
prost-types = { git = "https://github.com/TaurusM/prost.git", branch = "main", package = "prost-types" }
prost = { git = "https://github.com/TaurusM/prost.git", branch = "main" }
rbs = { git = "https://github.com/TaurusM/rbatis.git", branch = "main", package = "rbs" }
rbatis = { git = "https://github.com/TaurusM/rbatis.git", branch = "main" }
rbatis-macro-driver = { git = "https://github.com/TaurusM/rbatis.git", branch = "main", package = "rbatis-macro-driver" }
async_once = { version = "0.2" }
http-body-util = { version = "0.1" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = { git = "https://github.com/TaurusM/tonic.git", branch = "main" }
dapr = { git = "https://github.com/TaurusM/dapr-rust-sdk.git", branch = "main" }
sg-sdk-inner = { path = "../sg-sdk-inner" }
sg-sdk-macro = { version = "0.0.1" }

base64 = { version = "0.21" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
