[package]
name = "sg-sdk-inner"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/ServerlessGuide/sg-sdk-temp.git"
description = "sg sdk"
license = "MIT OR Apache-2.0"

[lib]
name = "sg_sdk_inner"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full", "macros", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
validator = { version = "0.16" }
validator_derive = { version = "0.16" }
chrono = { version = "0.4", features = ["serde"] }
regex = { version = "1.6" }
lazy_static = { version = "1.4" }
bevy_reflect = { version = "0.12" }
async-trait = { version = "0.1" }
pipe-trait = { version = "0.4" }
dapr = { git = "https://github.com/TaurusM/dapr-rust-sdk.git", branch = "main", version = "*" }
downcast-rs = { version = "1.2" }
prost-types = { git = "https://github.com/TaurusM/prost.git", branch = "main", package = "prost-types", version = "*" }
prost = { git = "https://github.com/TaurusM/prost.git", branch = "main", version = "*" }
tonic = { git = "https://github.com/TaurusM/tonic.git", branch = "main", version = "*" }
futures-util = { version = "0.3", features = ["sink", "std"] }
rbs = { git = "https://github.com/TaurusM/rbatis.git", branch = "main", package = "rbs", version = "*" }
rbatis = { git = "https://github.com/TaurusM/rbatis.git", branch = "main", version = "*" }
rbatis-macro-driver = { git = "https://github.com/TaurusM/rbatis.git", branch = "main", package = "rbatis-macro-driver", version = "*" }
sqlparser = { version = "0.40" }
base64 = { version = "0.21" }
hex = { version = "0.4" }
hex-literal = { version = "0.4" }
async_once = { version = "0.2" }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = { version = "0.1" }
http-body = { version = "1" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime = { version = "0.3.17" }
multer = { version = "3.0.0" }
tokio-util = { version = "0.7" }
sg-sdk-macro = { path = "../sg-sdk-macro", version = "*"}


[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
